// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideControls component doesn't apply the full size class, when vertical 1`] = `
<div>
  <div
    class="SlideControls SlideControls--vertical"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-112 iconButtonStyles-medium-118 iconButtonStyles-text-114"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-112 iconButtonStyles-medium-118 iconButtonStyles-text-114"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component doesn't call useless state change on animationEnd 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SlideControls component getDirection execute correctly if total === 2 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers numbers--up"
        >
          <span
            class="number"
          >
            01
          </span>
          <span
            class="number number--active"
          >
            02
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        02
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-332 iconButtonStyles-medium-338 iconButtonStyles-text-334"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves backward by one number 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-272 iconButtonStyles-medium-278 iconButtonStyles-text-274"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-272 iconButtonStyles-medium-278 iconButtonStyles-text-274"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves forward by one number 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-252 iconButtonStyles-medium-258 iconButtonStyles-text-254"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            02
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-252 iconButtonStyles-medium-258 iconButtonStyles-text-254"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from first to last number 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-312 iconButtonStyles-medium-318 iconButtonStyles-text-314"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            05
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-312 iconButtonStyles-medium-318 iconButtonStyles-text-314"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component moves from last to first number 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-292 iconButtonStyles-medium-298 iconButtonStyles-text-294"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-292 iconButtonStyles-medium-298 iconButtonStyles-text-294"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders a dark themed 1`] = `
<div>
  <div
    class="SlideControls SlideControls--light"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-92 iconButtonStyles-medium-98 iconButtonStyles-text-94 iconButtonStyles-textDark-95"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-92 iconButtonStyles-medium-98 iconButtonStyles-text-94 iconButtonStyles-textDark-95"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders correctly 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-12 iconButtonStyles-medium-18 iconButtonStyles-text-14"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-12 iconButtonStyles-medium-18 iconButtonStyles-text-14"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders full size 1`] = `
<div>
  <div
    class="SlideControls SlideControls--vertical"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-72 iconButtonStyles-medium-78 iconButtonStyles-text-74"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-72 iconButtonStyles-medium-78 iconButtonStyles-text-74"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders the total number when current is more than total 1`] = `
<div>
  <div
    class="SlideControls"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-32 iconButtonStyles-medium-38 iconButtonStyles-text-34"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            05
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-32 iconButtonStyles-medium-38 iconButtonStyles-text-34"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`SlideControls component renders vertically 1`] = `
<div>
  <div
    class="SlideControls SlideControls--vertical"
  >
    <button
      aria-label="previous"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-52 iconButtonStyles-medium-58 iconButtonStyles-text-54"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <span
      class="middle-container"
    >
      <span
        class="sliding-slot"
      >
        <span
          class="numbers"
        >
          <span
            class="number number--active"
          >
            01
          </span>
        </span>
      </span>
      <span
        class="total"
      >
        05
      </span>
    </span>
    <button
      aria-label="next"
      class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-52 iconButtonStyles-medium-58 iconButtonStyles-text-54"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root chevron"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
